--- a/docker/cpu/Dockerfile
+++ b/docker/cpu/Dockerfile
@@ -1,46 +1,75 @@
 FROM ubuntu:16.04
-LABEL maintainer caffe-maint@googlegroups.com
+ENV LANG C.UTF-8
+RUN groupadd --gid 1000 uisee \
+    && useradd --uid 1000 --gid uisee --shell /bin/bash --create-home uisee
 
-RUN apt-get update && apt-get install -y --no-install-recommends \
-        build-essential \
-        cmake \
-        git \
-        wget \
-        libatlas-base-dev \
-        libboost-all-dev \
-        libgflags-dev \
-        libgoogle-glog-dev \
-        libhdf5-serial-dev \
-        libleveldb-dev \
-        liblmdb-dev \
-        libopencv-dev \
-        libprotobuf-dev \
-        libsnappy-dev \
-        protobuf-compiler \
-        python-dev \
-        python-numpy \
-        python-pip \
-        python-setuptools \
-        python-scipy && \
+RUN sed -i 's/archive.ubuntu.com/mirrors.tuna.tsinghua.edu.cn/g' /etc/apt/sources.list && \
+    apt-get update && apt-get install -y --no-install-recommends \
+    build-essential \
+    cmake \
+    git \
+    wget \
+    curl \
+    ca-certificates \
+    libatlas-base-dev \
+    libboost-all-dev \
+    libgflags-dev \
+    libgoogle-glog-dev \
+    libhdf5-serial-dev \
+    libleveldb-dev \
+    liblmdb-dev \
+    libprotobuf-dev \
+    libsnappy-dev \
+    pkg-config \
+    libgtk2.0-dev \
+    pkg-config \
+    libavcodec-dev \
+    libavformat-dev \
+    libswscale-dev \
+    libjpeg-dev \
+    libpng-dev \
+    libtiff-dev \
+    libjasper-dev \
+    libdc1394-22-dev \
+    protobuf-compiler \
+    python3-dev \
+    python3-setuptools && \
     rm -rf /var/lib/apt/lists/*
 
 ENV CAFFE_ROOT=/opt/caffe
 WORKDIR $CAFFE_ROOT
 
-# FIXME: use ARG instead of ENV once DockerHub supports this
-# https://github.com/docker/hub-feedback/issues/460
-ENV CLONE_TAG=1.0
-
-RUN git clone -b ${CLONE_TAG} --depth 1 https://github.com/BVLC/caffe.git . && \
-    pip install --upgrade pip && \
-    cd python && for req in $(cat requirements.txt) pydot; do pip install $req; done && cd .. && \
+RUN curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py && \
+    python3 get-pip.py && \
+    pip3 install -i https://pypi.tuna.tsinghua.edu.cn/simple --upgrade \
+    Cython \
+    wheel \
+    python-dateutil \
+    numpy && \
+    wget https://github.com/opencv/opencv/archive/3.4.7.tar.gz && \
+    tar -zxf 3.4.7.tar.gz && cd opencv-3.4.7 && \
     mkdir build && cd build && \
-    cmake -DCPU_ONLY=1 .. && \
-    make -j"$(nproc)"
+    cmake -D CMAKE_BUILD_TYPE=RELEASE \
+    -D PYTHON_DEFAULT_EXECUTABLE=/usr/bin/python3 \
+    -D PYTHON3_EXECUTABLE=/usr/bin/python3 \
+    -D PYTHON3_NUMPY_INCLUDE_DIRS=/usr/local/lib/python3.5/dist-packages/numpy/core/include \
+    -D PYTHON3_PACKAGES_PATH=/usr/lib/python3/dist-packages \
+    -D CMAKE_CXX_FLAGS="-std=c++11" \
+    -D CUDA_NVCC_FLAGS="--compiler-options "-std=c++03"" .. && \
+    make -j"$(nproc)" && make install
+ENV LD_LIBRARY_PATH /usr/local/lib:&LD_LIBRARY_PATH
+RUN git clone https://github.com/woodsgao/caffe.git && \
+    cd caffe && \
+    mv Makefile.config.cpu Makefile.config && \
+    pip3 install -i https://pypi.tuna.tsinghua.edu.cn/simple --upgrade pip python-dateutil && \
+    cd python && for req in $(cat requirements.txt) pydot; do pip3 install -i https://pypi.tuna.tsinghua.edu.cn/simple $req; done && cd .. && \
+    make -j"$(nproc)" all && \
+    make -j"$(nproc)" test && \
+    make -j"$(nproc)" pycaffe
 
-ENV PYCAFFE_ROOT $CAFFE_ROOT/python
+ENV PYCAFFE_ROOT $CAFFE_ROOT/caffe/python
 ENV PYTHONPATH $PYCAFFE_ROOT:$PYTHONPATH
-ENV PATH $CAFFE_ROOT/build/tools:$PYCAFFE_ROOT:$PATH
+ENV PATH $CAFFE_ROOT/caffe/build/tools:$PYCAFFE_ROOT:$PATH
 RUN echo "$CAFFE_ROOT/build/lib" >> /etc/ld.so.conf.d/caffe.conf && ldconfig
 
 WORKDIR /workspace
