--- a/docker/gpu/Dockerfile
+++ b/docker/gpu/Dockerfile
@@ -41,25 +41,33 @@ WORKDIR $CAFFE_ROOT
 
 RUN curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py && \
     python3 get-pip.py && \
-    pip3 install -i https://pypi.tuna.tsinghua.edu.cn/simple \
+    pip3 install -i https://pypi.tuna.tsinghua.edu.cn/simple --upgrade \
     Cython \
-    wheel && \
+    wheel \
+    python-dateutil \
+    numpy && \
     wget https://github.com/opencv/opencv/archive/3.4.7.tar.gz && \
     tar -zxf 3.4.7.tar.gz && cd opencv-3.4.7 && \
     mkdir build && cd build && \
-    cmake .. && make -j"$(nproc)" && make install && rm -r $CAFFE_ROOT/opencv-3.4.7
+    cmake -D CMAKE_BUILD_TYPE=RELEASE \
+    -D PYTHON_DEFAULT_EXECUTABLE=/usr/bin/python3 \
+    -D PYTHON3_EXECUTABLE=/usr/bin/python3 \
+    -D PYTHON3_NUMPY_INCLUDE_DIRS=/usr/local/lib/python3.5/dist-packages/numpy/core/include \
+    -D PYTHON3_PACKAGES_PATH=/usr/lib/python3/dist-packages \
+    -D CMAKE_CXX_FLAGS="-std=c++11" \
+    -D CUDA_NVCC_FLAGS="--compiler-options "-std=c++03"" .. && \
+    make -j"$(nproc)" && make install && rm -r $CAFFE_ROOT/opencv-3.4.7
 ENV LD_LIBRARY_PATH /usr/local/lib:&LD_LIBRARY_PATH
-RUN git clone https://github.com/woodsgao/caffe.git && \
+RUN git clone --depth 1 https://github.com/woodsgao/caffe.git . && \
     cd caffe && \
-    pip3 install -i https://pypi.tuna.tsinghua.edu.cn/simple --upgrade pip python-dateutil && \
     cd python && for req in $(cat requirements.txt) pydot; do pip3 install -i https://pypi.tuna.tsinghua.edu.cn/simple $req; done && cd .. && \
     make -j"$(nproc)" all && \
     make -j"$(nproc)" test && \
     make -j"$(nproc)" pycaffe
 
-ENV PYCAFFE_ROOT $CAFFE_ROOT/caffe/python
+ENV PYCAFFE_ROOT $CAFFE_ROOT/python
 ENV PYTHONPATH $PYCAFFE_ROOT:$PYTHONPATH
-ENV PATH $CAFFE_ROOT/caffe/build/tools:$PYCAFFE_ROOT:$PATH
+ENV PATH $CAFFE_ROOT/build/tools:$PYCAFFE_ROOT:$PATH
 RUN echo "$CAFFE_ROOT/build/lib" >> /etc/ld.so.conf.d/caffe.conf && ldconfig
 
 WORKDIR /workspace
