add cu80 version

--- a/docker/gpu/Dockerfile.cu101
+++ b/docker/gpu/Dockerfile.cu101
@@ -1,4 +1,4 @@
-FROM ubuntu:16.04
+FROM nvidia/cuda:10.1-cudnn7-devel-ubuntu16.04
 ENV LANG C.UTF-8
 RUN groupadd --gid 1000 uisee \
     && useradd --uid 1000 --gid uisee --shell /bin/bash --create-home uisee
@@ -67,7 +67,7 @@ RUN git clone --depth 1 https://github.com/woodsgao/caffe.git . && \
     cd python && \
     for req in $(cat requirements.txt) pydot; do pip3 install -i https://pypi.tuna.tsinghua.edu.cn/simple $req; done && \
     cd .. && \
-    cp Makefile.config.cpu Makefile.config && \
+    cp Makefile.config.cu101 Makefile.config && \
     make -j"$(nproc)" all && \
     make -j"$(nproc)" test && \
     make -j"$(nproc)" pycaffe
